--- a/arch/arm64/configs/ysl_defconfig
+++ b/arch/arm64/configs/ysl_defconfig
@@ -85,13 +85,17 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PIXUTIL=y
+CONFIG_CPU_FREQ_GOV_PIXEL_SMURFUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
 CONFIG_STATE_NOTIFIER=y
@@ -723,13 +727,9 @@ CONFIG_PSTORE_LAST_KMSG=y
 CONFIG_SPI_SPIDEV=y
 
 #Misc
-CONFIG_CPU_FREQ_GOV_PIXUTIL=y
-CONFIG_CPU_FREQ_GOV_PIXEL_SMURFUTIL=y
 # CONFIG_PSI is not set
-CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CPUSETS_ASSIST=y
-CONFIG_STATE_NOTIFIER=y
 CONFIG_POWERSUSPEND=y
 
 #Boost
