--- a/arch/arm64/configs/ysl_defconfig
+++ b/arch/arm64/configs/ysl_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-ProjektEva"
+CONFIG_LOCALVERSION="-ProjektEva-Fox-kernel"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
