--- a/arch/arm64/configs/ysl_defconfig
+++ b/arch/arm64/configs/ysl_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ProjektEva-Fox-kernel"
+CONFIG_LOCALVERSION="-ProjektEva-Fox-kernel-🦊"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
