ysl_defconfig: few changes
* using ticker at 1000hz
* disable core CTL and auto group for better jitter "need test"

--- a/arch/arm64/configs/ysl_defconfig
+++ b/arch/arm64/configs/ysl_defconfig
@@ -148,7 +148,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
 CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_SCHED_CORE_CTL=y
+# CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_SCHED_CORE_ROTATE is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
@@ -156,7 +156,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
-CONFIG_SCHED_AUTOGROUP=y
+# CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
 CONFIG_CPUSETS_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="1-2"
@@ -452,11 +452,11 @@ CONFIG_ARCH_NR_GPIO=1280
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ_100=y
+CONFIG_HZ_1000=y
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ_1000
+# CONFIG_HZ=100 is not set
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
